--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         <p class="subscabe_desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. A soluta hic temporibus!</p>
         <form class="form" action="#">
           <label for="email"></label>
-          <input id="email" class="subscribe_input" name="email" type="text" placeholder="Email Address...">
+          <input id="email" class="subscribe_input" name="email" type="text" placeholder="Email Address..">
           <button class="button button-big">Subscribe</button>
         </form>
       </div>
